--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 # MINITAGE LIBRARY PROJECT BUILDOUT
 ################################################################################
 [buildout]
+extensions=buildout.minitagificator
 parts = part
 versions = versions
 hooks-directory = ${buildout:directory}/hooks
@@ -10,16 +11,15 @@ develop-eggs-directory=../../eggs/develop-eggs
 [versions]
 [part]
 recipe = minitage.recipe.cmmi
-url = http://${mirrors:gentoo}/gentoo/distfiles/tiff-4.0.1.tar.gz
-
-md5sum = fae149cc9da35c598d8be897826dfc63
-
-
-
-    
-
-
+url =http://${mirrors:gentoo}/distfiles/unzip60.tar.gz
+md5sum =62b490407489521db863b523a7f86375
+noconfigure=true
+make-options =-f unix/Makefile PREFIX=${buildout:directory}/parts/part
+make-targets-linux=linux_noasm
+cflags=-DUSE_BZIP2 -DUNICODE_SUPPORT -DUNICODE_WCHAR -DUTF8_MAYBE_NATIVE -DLARGE_FILE_SUPPORT 
+cflags-linux= -DNO_LCHMOD ${part:cflags}
+patches=${buildout:directory}/minitage.patch
+patch-options=-Np1
+pre-configure-hook=${buildout:directory}/h.py:p
 [mirrors]
-gentoo = mirror.mcs.anl.gov/pub
-
-
+gentoo = gentoo.tiscali.nl
